--- a/login.html
+++ b/login.html
@@ -39,8 +39,8 @@
                     <input class="form-control" id="login_pwd" placeholder="密码">
                 </div>
                 <div class="form-links clearfix">
-                    <a class="yellowColor pull-left" href="javascript:void(0);" id="js_reg">注册</a>
-                    <a class="yellowColor pull-right" href="javascript:void(0);" id="js_findPwd">忘记密码？</a>
+                    <a class="yellowColor pull-left" href="javascript:void(0);" onclick="showRegEmail();">注册</a>
+                    <a class="yellowColor pull-right" href="javascript:void(0);" onclick="showRegEmail();">忘记密码？</a>
                 </div>
                 <button type="button" class="btn-red">登录</button>
                 <div class="form-group">
@@ -57,6 +57,7 @@
                 <p class="login_t">手机注册</p>
                 <div class="form-group">
                     <input id="mobile-number" class="form-control mobile-number" type="tel" placeholder="手机号码">
+                    <p id="error-msg" class="hide">号码格式不正确</p>
                 </div>
                 <div class="form-group input-group">
                     <input type="text" class="form-control" placeholder="验证码" id="codeMsg">
@@ -64,8 +65,8 @@
                 </div>
                 <button type="button" class="btn-red">下一步</button>
                 <div class="form-links form-group clearfix">
-                    <a class="yellowColor pull-left" href="javascript:void(0);" id="js_login">登录</a>
-                    <a class="yellowColor pull-right" href="javascript:void(0);" id="js_emailReg">邮箱注册</a>
+                    <a class="yellowColor pull-left" href="javascript:void(0);" onclick="showLogin();">登录</a>
+                    <a class="yellowColor pull-right" href="javascript:void(0);" onclick="showRegEmail();">邮箱注册</a>
                 </div>
             </div>
             <!--regEmail_form-->
@@ -80,8 +81,8 @@
                 </div>
                 <button type="button" class="btn-red">下一步</button>
                 <div class="form-links form-group clearfix">
-                    <a class="yellowColor pull-left" href="javascript:void(0);" id="js_login_email">登录</a>
-                    <a class="yellowColor pull-right" href="javascript:void(0);" id="js_phoneReg">手机注册</a>
+                    <a class="yellowColor pull-left" href="javascript:void(0);" onclick="showLogin();">登录</a>
+                    <a class="yellowColor pull-right" href="javascript:void(0);" onclick="showRegPhone();">手机注册</a>
                 </div>
             </div>
         </div>
@@ -100,14 +101,61 @@
 <script type="text/javascript" src="js/jquery-2.1.3.min.js"></script>
 <script type="text/javascript" src="js/jquery-migrate-1.4.1.min.js"></script>
 <script type="text/javascript" src="js/bootstrap.min.js"></script>
+<script type="text/javascript" src="js/intlTelInput.js"></script>
 <script type="text/javascript" src="js/validator.js"></script>
-<script type="text/javascript" src="js/intlTelInput.min.js"></script>
 <script type="text/javascript" src="js/app.js"></script>
 <script type="text/javascript">
 
-$("#mobile-number").intlTelInput({
-    defaultCountry: "cn"
-});
+    $(function () {
+
+        // 国际区号选择和验证电话号码
+        var telInput = $("#mobile-number"),
+            errorMsg = $("#error-msg");
+        // 初始化
+
+        telInput.intlTelInput({
+            nationalMode: true,
+            initialCountry: "cn"
+        });
+        var reset = function() {
+            telInput.removeClass("error");
+            errorMsg.addClass("hide");
+        };
+
+        //  验证号码是否符合规范
+        telInput.blur(function() {
+            reset();
+            if ($.trim(telInput.val())) {
+                if (!telInput.intlTelInput("isValidNumber")) {
+                    telInput.addClass("error");
+                    errorMsg.removeClass("hide");
+                }
+            }
+        });
+
+        // on keyup / change flag: reset
+        telInput.on("keyup change", reset);
+    });
+
+    // 登录
+    function showLogin() {
+        $('#login_form').show();
+        $('#regEmail_form').hide();
+        $('#regPhone_form').hide();
+    }
+    // 邮箱注册
+    function showRegEmail() {
+        $('#login_form').hide();
+        $('#regEmail_form').show();
+        $('#regPhone_form').hide();
+    }
+    // 手机注册
+    function showRegPhone() {
+        $('#login_form').hide();
+        $('#regEmail_form').hide();
+        $('#regPhone_form').show();
+    }
+
 
 </script>
 </body>
