--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <title>音特电子</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/animate.min.css">
-    <link rel="stylesheet" href="css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/swiper.min.css">
-    <link rel="stylesheet" href="css/common.css" type="text/css">
+    <link rel="stylesheet" href="css/iconfont.css">
+    <link rel="stylesheet" href="css/slippry.css">
+    <link rel="stylesheet" href="app.css" type="text/css">
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
     <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
@@ -24,28 +24,340 @@
 <div class="wrapper">
     <!-- 通用头部-->
     <header class="header">
-
+        <div class="logo">
+            <a href="index.html"><img src="images/logo.png"></a>
+        </div>
+        <!--导航条-->
+        <nav class="navTop">
+            <div class="container">
+                <ul id="navTopList" class="clearfix">
+                    <li><a href="#">家庭娱乐</a></li>
+                    <li><a href="#">ktv娱乐</a></li>
+                    <li><a href="#">音箱</a></li>
+                    <li><a href="#">无线蓝牙麦克风</a></li>
+                    <li><a href="#">音频处理器</a></li>
+                    <li><a href="#">BOX KTV</a></li>
+                    <li><a href="#">人人唱</a></li>
+                </ul>
+            </div>
+        </nav>
     </header>
     <!--banner-->
     <section class="banner">
-
+        <ul id="slippry-index">
+            <li>
+                <a href="#slide1">
+                    <img src="images/banner1.jpg">
+                </a>
+            </li>
+            <li>
+                <a href="#slide2">
+                    <img src="images/banner3.jpg">
+                </a>
+            </li>
+            <li>
+                <a href="#slide3">
+                    <img src="images/banner1.jpg">
+                </a>
+            </li>
+        </ul>
     </section>
     <!-- 内容区-->
-    <section class="content">
-
+    <section class="content_index">
+        <!--APP应用-->
+        <div class="app">
+            <div class="container">
+                <h2 class="pro_kinds">APP应用</h2>
+                <div class="row">
+                    <div class="col-lg-4">
+                        <div class="app_div">
+                            <a class="app_a" href="#">
+                                30万歌库
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="app_div">
+                            <a class="app_a" href="#">
+                                流媒体
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="app_div">
+                            <a class="app_a" href="#">
+                                乐谱输出
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!--APP介绍-->
+        <div class="apps">
+            <a href="#">
+                <img class="img-responsive" src="images/app.jpg">
+            </a>
+        </div>
+        <!--商城-家庭娱乐-->
+        <div class="index-shop">
+            <div class="container">
+                <h2 class="pro_kinds">家庭娱乐</h2>
+                <div class="row">
+                    <div class="col-lg-6">
+                        <a href="page.html">
+                            <div class="product clearfix">
+                                <div class="pro-img pull-left">
+                                    <img class="product_img" src="images/E1.png">
+                                </div>
+                                <div class="pro-info pull-right">
+                                    <h4 class="pro_name">卡拉OK  E1</h4>
+                                    <p class="pro_tip">随时随地，想唱就唱</p>
+                                    <h4 class="pro_money">¥ 1999</h4>
+                                    <a class="pro_moreDetail" href="page.html">了解详情</a>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-lg-6">
+                        <a href="page.html">
+                            <div class="product clearfix">
+                                <div class="pro-img pull-left">
+                                    <img class="product_img" src="images/E2.png">
+                                </div>
+                                <div class="pro-info pull-right">
+                                    <h4 class="pro_name">卡拉OK  E2</h4>
+                                    <p class="pro_tip">无线麦克风，高质音源</p>
+                                    <h4 class="pro_money">¥ 1999</h4>
+                                    <a class="pro_moreDetail" href="page.html">了解详情</a>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-lg-6">
+                        <a href="page.html">
+                            <div class="product clearfix">
+                                <div class="pro-img pull-left">
+                                    <img class="product_img" src="images/E3.png">
+                                </div>
+                                <div class="pro-info pull-right">
+                                    <h4 class="pro_name">卡拉OK  E3</h4>
+                                    <p class="pro_tip">随时随地，想唱就唱</p>
+                                    <h4 class="pro_money">¥ 1999</h4>
+                                    <a class="pro_moreDetail" href="page.html">了解详情</a>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-lg-6">
+                        <a href="page.html">
+                            <div class="product clearfix">
+                                <div class="pro-img pull-left">
+                                    <img class="product_img" src="images/E5.png">
+                                </div>
+                                <div class="pro-info pull-right">
+                                    <h4 class="pro_name">卡拉OK  E5</h4>
+                                    <p class="pro_tip">随时随地，想唱就唱</p>
+                                    <h4 class="pro_money">¥ 1999</h4>
+                                    <a class="pro_moreDetail" href="page.html">了解详情</a>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!--商城-KTV娱乐-->
+        <div class="index-ktv">
+            <h2 class="pro_kinds text-center">KTV娱乐</h2>
+            <section id="shop-ktv">
+                <article class="ktv_div">
+                    <a class="ktv_a" href="page.html">
+                        <div class="image-content">
+                            <img src="images/ktv1.jpg" alt="demo1_2" class="product-image">
+                        </div>
+                        <div class="product-info">
+                            <p class="product-td">简约线条豪华设计<br>全球顶级乐器打造顶级音源</p>
+                            <p class="product-yuan">¥ <span class="product-money">1200</span> 起</p>
+                            <a class="pro_moreDetail pull-right" href="page.html">了解详情</a>
+                        </div>
+                    </a>
+                </article>
+                <article class="ktv_div">
+                    <a class="ktv_a" href="page.html">
+                        <div class="image-content">
+                            <img src="images/ktv1.jpg" alt="demo1_2" class="product-image">
+                        </div>
+                        <div class="product-info clearfix">
+                            <p class="product-td">超过20万歌曲云端歌库<br>全球顶级乐器打造顶级音源</p>
+                            <p class="product-yuan">¥ <span class="product-money">1200</span> 起</p>
+                            <a class="pro_moreDetail pull-right" href="page.html">了解详情</a>
+                        </div>
+                    </a>
+                </article>
+                <article class="ktv_div">
+                    <a class="ktv_a" href="page.html">
+                        <div class="image-content">
+                            <img src="images/ktv1.jpg" alt="demo1_2" class="product-image">
+                        </div>
+                        <div class="product-info clearfix">
+                            <p class="product-td">欧洲古典优雅设计<br>高品质，不将就</p>
+                            <p class="product-yuan">¥ <span class="product-money">1200</span> 起</p>
+                            <a class="pro_moreDetail pull-right" href="page.html">了解详情</a>
+                        </div>
+                    </a>
+                </article>
+                <article class="ktv_div">
+                    <a class="ktv_a" href="page.html">
+                        <div class="image-content">
+                            <img src="images/ktv1.jpg" alt="demo1_2" class="product-image">
+                        </div>
+                        <div class="product-info clearfix">
+                            <p class="product-td">超过20万歌曲云端歌库<br>全球顶级乐器打造顶级音源</p>
+                            <p class="product-yuan">¥ <span class="product-money">1200</span> 起</p>
+                            <a class="pro_moreDetail pull-right" href="page.html">了解详情</a>
+                        </div>
+                    </a>
+                </article>
+            </section>
+        </div>
+        <!--迷你KTV-->
+        <div class="miniKtv">
+            <a href="#">
+                <img class="img-responsive" src="images/ktv.jpg">
+            </a>
+        </div>
     </section>
+    <!-- aside -->
+    <aside id="aside">
+        <ul id="asideList">
+            <li><i class="iconfont icon-gerenzhongxin"></i></li>
+            <li><i class="iconfont icon-gouwuche3"></i></li>
+            <li><i class="iconfont icon-kefu"></i></li>
+            <li id="toTop"><i class="iconfont icon-zhiding"></i></li>
+        </ul>
+    </aside>
     <!-- footer-->
-    <footer class="footer">
-
+    <footer id="footer">
+        <div class="container">
+            <ul class="footer-top clearfix">
+                <li>
+                    <i class="iconfont icon-tianwuliyoubaotui"></i>
+                    <span class="footerService">7天无理由退货</span>
+                </li>
+                <li>
+                    <i class="iconfont icon-tianbaohuan"></i>
+                    <span class="footerService">30天包换</span>
+                </li>
+                <li>
+                    <i class="iconfont icon-quanguobaoyou"></i>
+                    <span class="footerService">全国包邮</span>
+                </li>
+                <li>
+                    <i class="iconfont icon-quanguobaoxiu"></i>
+                    <span class="footerService">全国联保</span>
+                </li>
+            </ul>
+            <div class="footerContent clearfix">
+                <ul id="footerList" class="clearfix">
+                    <li class="footerNav">
+                        热门链接
+                        <ul class="footerLinks">
+                            <li><a href="#">E1</a></li>
+                            <li><a href="#">蓝牙无线麦克风</a></li>
+                            <li><a href="#">常见问题</a></li>
+                        </ul>
+                    </li>
+                    <li class="footerNav">
+                        帮助中心
+                        <ul class="footerLinks">
+                            <li><a href="#">购物流程</a></li>
+                            <li><a href="#">售后服务</a></li>
+                            <li><a href="#">相关下载</a></li>
+                        </ul>
+                    </li>
+                    <li class="footerNav">
+                        音特商城
+                        <ul class="footerLinks">
+                            <li><a href="#">家庭娱乐</a></li>
+                            <li><a href="#">KTV娱乐</a></li>
+                            <li><a href="#">音响</a></li>
+                            <li><a href="#">蓝牙无线麦克风</a></li>
+                            <li><a href="#">音频处理器</a></li>
+                            <li><a href="#">BOX KTV</a></li>
+                            <li><a href="#">人人唱</a></li>
+                            <li><a href="#">歌库</a></li>
+                        </ul>
+                    </li>
+                    <li class="footerNav">
+                        关于音特
+                        <ul class="footerLinks">
+                            <li><a href="#">了解音特</a></li>
+                            <li><a href="#">新闻资讯</a></li>
+                            <li><a href="#">加入我们</a></li>
+                            <li><a href="#">联系我们</a></li>
+                        </ul>
+                    </li>
+                    <li class="footerNav">
+                        语言
+                        <ul class="footerLinks">
+                            <li><a href="#">简体中文</a></li>
+                            <li><a href="#">繁体中文</a></li>
+                            <li><a href="#">English</a></li>
+                            <li><a href="#">한국어</a></li>
+                            <li><a href="#">日本语</a></li>
+                        </ul>
+                    </li>
+                </ul>
+                <div id="footerContact">
+                    <strong class="footer-call">400-119-5555</strong>
+                    <p class="footer-text">( 24小时全国服务热线 )</p>
+                    <a class="serviceCall" href="#"><i class="iconfont icon-kefu"></i><span>24小时在线客服</span></a>
+                    <div class="footerCode">
+                        <img src="images/weibo-img.jpg">
+                        <img src="images/weixin-img.jpg">
+                        <img src="images/timg.jpg">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="footerBar">© dameigong.cn 2017 皖ICP备17012709号</div>
     </footer>
 </div>
-<script src="js/jquery-2.1.3.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/swiper.jquery.min.js"></script>
+<script type="text/javascript" src="js/jquery-2.1.3.min.js"></script>
+<script type="text/javascript" src="js/jquery.easing.1.3.js"></script>
+<script type="text/javascript" src="js/jquery-migrate-1.4.1.min.js"></script>
+<script type="text/javascript" src="js/modernizr-custom.min.js"></script>
+<script type="text/javascript" src="js/bootstrap.min.js"></script>
+<script type="text/javascript" src="js/slippry.js"></script>
+<script type="text/javascript" src="js/app.js"></script>
 
 <script type="text/javascript">
     $(document).ready(function () {
+        $('#slippry-index').slippry();
+        $('#shop-ktv').slippry({
+            // general elements & wrapper
+            slippryWrapper: '<div class="sy-box shop-slider" />', // wrapper to wrap everything, including pager
+            elements: 'article', // elments cointaining slide content
 
+            // options
+            adaptiveHeight: false, // height of the sliders adapts to current slide
+            start: 2, // num (starting from 1), random
+            loop: true, // first -> last & last -> first arrows
+            captionsSrc: 'article',
+            captions: 'overlay', // Position: overlay, below, custom, false
+
+            // pager
+            pager: true,
+
+            // transitions
+            slideMargin: 20, // spacing between slides (in %)
+            useCSS: true,
+            transition: 'horizontal',
+            controls: true,
+            // slideshow
+            auto: false
+        });
     });
 </script>
 </body>
