--- a/index.html
+++ b/index.html
@@ -170,6 +170,8 @@
         <!--商城-KTV娱乐-->
         <div class="index-ktv">
             <h2 class="pro_kinds text-center">KTV娱乐</h2>
+            <img class="shop-left" src="images/left.png">
+            <img class="shop-right" src="images/right.png">
             <section id="shop-ktv">
                 <article class="ktv_div">
                     <a class="ktv_a" href="page.html">
